--- a/src/app/modules/msk-admin/login/login-page.component.html
+++ b/src/app/modules/msk-admin/login/login-page.component.html
@@ -8,9 +8,12 @@
           <br/>
           <!--<div class="card-img overlap">-->
             <!--<img alt="element 06" class="mb-1" src="assets/img/logos/512.png" width="190">-->
-          <!--</div>-->
-          <div class="card-body align-content">
-            <div class="card-block">
+            <!--</div>-->
+            <div class="card-body align-content">
+              <div class="card-block">
+              <div class="alert alert-dark" role="alert" *ngIf="isExpired">
+                Sua sessão expirou, por favor faça login novamente.
+              </div>
               <form [formGroup]="regularForm" (ngSubmit)="onSubmit()" novalidate>
                 <div class="form-group ">
                   <div class="col-md-12">
