--- a/src/app/modules/msk-admin/login/login-page.component.html
+++ b/src/app/modules/msk-admin/login/login-page.component.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="card-footer">
-            <div class="float-left"><a (click)="onForgotPassword()">Esqueci a senha</a></div>
+            <div class="float-left"><a routerLink="/forgotpassword">Esqueci a senha</a></div>
           </div>
         </div>
       </div>
