--- a/src/app/modules/msk-reports/list-reports/list-reports-page.component.html
+++ b/src/app/modules/msk-reports/list-reports/list-reports-page.component.html
@@ -24,6 +24,8 @@
 
         <ngx-datatable-column [width]="200" name="Nome do Arquivo" prop="name">
         </ngx-datatable-column>
+        <ngx-datatable-column [width]="200" name="id da empresa" prop="idCompany">
+        </ngx-datatable-column>
 
         <!--<ngx-datatable-column name="Status" >-->
 
