--- a/src/assets/sass/scss/plugins.scss
+++ b/src/assets/sass/scss/plugins.scss
@@ -1,2 +1,3 @@
 @import "plugins/perfect-scrollbar/main";
 @import "plugins/datatables";
+//@import "../../../../../../../_developer/workspace_angular/mangobits/desencalheiAdmin/src/assets/sass/scss/plugins/plugin-nouislider";
