--- a/src/app/modules/msk-admin/forgot-password/forgot-password-page.component.html
+++ b/src/app/modules/msk-admin/forgot-password/forgot-password-page.component.html
@@ -16,7 +16,7 @@
               </div>
               <form [formGroup]="regularForm" class="pt-3" (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                  <input type="email" class="form-control" formControlName="email" id="email" placeholder="Seu endereço de email" ngModel required email>
+                  <input type="email" class="form-control" formControlName="email" id="email" placeholder="Seu endereço de email" ngModel required email autocomplete="off">
                   <small class="form-text text-muted danger" *ngIf="!regularForm.get('email').valid && (regularForm.get('email').dirty || regularForm.get('email').touched)">
                     Informe um Email
                   </small>
